<resources>
    <string name="app_name">Mvi Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="categories">Categories</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>