<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.AddFragment">

    <!-- CloseImg -->
    <ImageView
        android:id="@+id/closeImg"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:contentDescription="@string/todo"
        android:rotation="45"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <!-- Title -->
    <EditText
        android:id="@+id/titleEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_yellow"
        android:hint="@string/title"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeImg"
        tools:ignore="Autofill,TextFields" />

    <!-- Desc -->
    <EditText
        android:id="@+id/descEdt"
        android:layout_width="0dp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_yellow"
        android:gravity="top"
        android:hint="@string/desc"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdt"
        tools:ignore="Autofill,TextFields" />

    <!-- CatsANDPriority -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categoriesLay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_yellow"
        android:padding="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descEdt">

        <!-- categories -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <!-- Spinner -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_3sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/categoriesSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:drawSelectorOnTop="false"
                android:dropDownVerticalOffset="@dimen/_30sdp"
                android:overlapAnchor="false"
                android:popupBackground="@drawable/bg_circle_white"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

        <!-- Priority -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cardView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView1" />

        <!-- Spinner -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/prioritySpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:drawSelectorOnTop="false"
                android:dropDownVerticalOffset="@dimen/_30sdp"
                android:overlapAnchor="false"
                android:popupBackground="@drawable/bg_circle_white"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriesLay" />
</androidx.constraintlayout.widget.ConstraintLayout>